# mural-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  languages.toml
.github/: matrix.json
.github/workflows/: docker-image.yml  musl-build.yml  release.yml
src/: cli.rs  config.rs  env.rs  error.rs  lib.rs  main.rs  pool.rs  prelude.rs  state.rs  wallpaper.rs
