[package]
name = "mural-server"
version = "1.0.0"
edition = "2024"
authors = ["Silvan Schmidt <mail@silvanschmidt.ch>"]
description = "Server software for the mural wallpaper service"
license = "MIT"
repository = "https://github.com/mural-sync/mural-server"


[dependencies]
actix-web = "4.10.2"
dotenvy = "0.15.7"
rand = "0.9.0"
rand_chacha = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
sha256 = "1.6.0"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
xdg = "2.5.2"
